tests/baselines/reference/commentsOnJSXExpressionsArePreserved(jsx=react,module=commonjs).errors.txt
tests/cases/compiler/commentsOnJSXExpressionsArePreserved.tsx(5,17): error TS2304: Cannot find name 'React'.


==== tests/cases/compiler/commentsOnJSXExpressionsArePreserved.tsx (1 errors) ====
    // file is intentionally not a module - this tests for a crash in the module/system transforms alongside the `react-jsx` and `react-jsxdev` outputs
    namespace JSX {}
    class Component {
        render() {
            return <div>
                    ~~~
!!! error TS2304: Cannot find name 'React'.
                {/* missing */}
                {null/* preserved */}
                {
                    // ??? 1
                }
                { // ??? 2
                }
                {// ??? 3
                }
                {
                    // ??? 4
                /* ??? 5 */}
            </div>;
        }
    }